<resources>
    <string name="app_name">Cribslist</string>
    <string name="action_settings">Settings</string>
    <string name="api_error">"Oh No! Something went wrong"</string>
    <string name="title_activity_login">Sign in</string>
    <string name="profile_image">Profile Image</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="prompt_enter_password">Enter Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="get_location">Get Location</string>
    <string name="permission_message">Please enable location permission to continue</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="newitemimage">newItemImage</string>
    <string name="location_icon">location icon</string>
    <string name="prof_pic">profile pic</string>
    <string name="inquire">Inquire</string>
    <string name="action_post">POST</string>
    <string name="prompt_title">Title</string>
    <string name="prompt_price">Price</string>
    <string name="prompt_location">Location</string>
    <string name="prompt_description">Description</string>
    <string name="account">Account</string>
    <string name="action_add">Add</string>
    <string name="my_items">My items</string>
    <string name="my_button">my button</string>
    <string name="search_hint">Search...</string>
    <string name="cancel">X</string>
    <string name="select_category">Select Category</string>
    <string name="action_remove_all">Remove All</string>
    <string name="enter_location">Enter Location</string>
    <string name="email">Email</string>
    <string name="comment">Comment</string>
    <string name="flag">Flag</string>
    <string name="add_comment">add comment...</string>
    <string name="options">Options</string>
    <string name="delete">Delete</string>
    <string name="action_remove">Remove</string>
    <string name="prompt_name">Name</string>
    <string name="add_profile_photo">Add Profile Photo</string>
    <string name="user_location">Location</string>
    <string name="invalid_input">Please fill out all fields before continuing...</string>
    <string name="cribslist">Cribslist</string>
</resources>
